<resources>
    <string name="app_name">Ceylona</string>
    <string name="olivia">olivia</string>
    <string name="log_textview">Discover.</string>
    <string name="log_textview2">Experience.</string>
    <string name="log_textview3">Remember.</string>
    <string name="destinations_textview">Popular Destinations</string>
    <string name="veiwall_textview">View all</string>
    <string name="footer">footer</string>
    <string name="homeicon">homeicon</string>
    <string name="next2">next2</string>
    <string name="next3">next3</string>
    <string name="user1">user1</string>
    <string name="settingsicon">settingsicon</string>
    <string name="quesionicon">quesionicon</string>
    <string name="security">Security</string>
    <string name="next5">next5</string>
    <string name="logout">Logout</string>
    <string name="logouticon">logouticon</string>
    <string name="next6">next6</string>
    <string name="next4">next4</string>
    <string name="shield">shield</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="daisyolii26_gmail_com">daisyolii26@gmail.com</string>
    <string name="olivia_daisy">Olivia Daisy</string>
    <string name="profile">Profile</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="signinnote">Please sign in to continue our app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="or_connect">Or connect</string>
    <string name="please_must_be_8_character">Please must be 8 character</string>
    <string name="continuee">Continue</string>
    <string name="explore_the_wonders_of_sri_lanka">Explore the Wonders of Sri Lanka...</string>
    <string name="get_started">Get Started</string>
    <string name="favourite_places">Favourite Places</string>
    <string name="discover">Discover</string>
    <string name="sign_inn">Sign In</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="please_fill_the_details_and_create_account">Please fill the details and create account</string>
    <string name="heart1">heart1</string>
    <string name="sign_upp">Sign Up</string>
    <string name="or_connectt">Or connect</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="australia">Australia</string>

</resources>